packages/svelte/tests/validator/samples/class-state-constructor-4/input.svelte.js
export class Counter {
	constructor() {
		if (true) {
			this.count = $state(0);
		}
	}
}
